# QA-Agent

./: .gitignore  README.md  app.py  main.ipynb  main.py  pyproject.toml
app/core/: config.py  logger.py
app/infra/db/: __init__.py  base_db.py  milvus_db.py
app/infra/utils/: data_utils.py  logger.py
app/services/: llm_service.py  rag_engine.py  retriever.py  schema.py
app/utils/: __init__.py  data.py  system.py
config/: setting.py
docs/: GovPulse 开发与提交规范 v1.0.md  GovPulse 项目实施手册 (v1.0).md  检索测试方案.md  面向电子政务的智能 RAG 问答系统深度实施方案.md
evaluation/: generate_test_data.py  generate_testset.py
scripts/: crawl.py  db_viewer.py  ingest.py  retrieve_demo.py
scripts/data/: crawl.py  gen_test_data.py  ingest.py
scripts/demo/: chat_demo.py  db_viewer.py  qwen_demo.py  retrieve_demo.py
scripts/evaluation/: retrieve_baseline.py
src/: __init__.py
src/app/agents/: __init__.py  base_agent.py  rag_agent.py  react_agent.py
src/app/agents/tools/: __init__.py  base_tool.py  classification_tool.py  generation_tool.py  registry.py  retrieval_tool.py  validation_tool.py
src/app/api/: app.py  routes.py
src/app/components/: __init__.py
src/app/components/classifier/: __init__.py  base_classifier.py  gov_classifier.py
src/app/components/generators/: __init__.py  base_generator.py  llm_generator.py
src/app/components/memory/: __init__.py  base_memory.py  conversation_memory.py
src/app/components/quality/: __init__.py  answer_validator.py  base_validator.py
src/app/components/retrievers/: __init__.py  base_retriever.py  hybrid_retriever.py
src/app/infra/db/: milvus_db.py
src/app/infra/llm/: __init__.py  base_llm_service.py  llm_service.py  multi_model_service.py  schema.py
src/app/infra/utils/: __init__.py  logger.py  system_utils.py
src/config/: setting.py
tests/: README.md  conftest.py
tests/agents/: test_rag_agent.py  test_react_agent.py
tests/api/: test_routes.py
tests/components/retrievers/: test_hybrid_retriever.py
tests/config/: test_settings.py
tests/infra/utils/: test_logger.py
tests/utils/: test_data.py
