[project]
name = "qa-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "colorama>=0.4.6",
    "dashscope>=1.25.5",
    "datasets>=4.5.0",
    "fastapi>=0.128.0",
    "flagembedding>=1.3.5",
    "jieba>=0.42.1",
    "milvus-lite>=2.5.1",
    "openpyxl>=3.1.5",
    "playwright>=1.57.0",
    "pymilvus>=2.6.6",
    "python-dotenv>=1.2.1",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.31",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
