[project]
name = "qa-agent"
version = "0.1.0"
description = "GovPulse - 泸州市政务智能问答系统 (Agentic RAG)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "colorama>=0.4.6",
    "dashscope>=1.25.5",
    "datasets>=4.5.0",
    "fastapi>=0.128.0",
    "flagembedding>=1.3.5",
    "jieba>=0.42.1",
    "logging>=0.4.9.6",
    "milvus-lite>=2.5.1",
    "modelscope>=1.34.0",
    "openpyxl>=3.1.5",
    "playwright>=1.57.0",
    "pymilvus>=2.6.6",
    "python-dotenv>=1.2.1",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.31",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src", "."]
# 过滤一些第三方库的警告
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
